tests/negative/symbols/use_undef2.orng
// use_undef2.orng:10:8: error: symbol `x` is never defined
//     4 + x
//       ^
// use_undef2.orng:9:10: note: declared here
//     let x: Int = undefined
//         ^
// 
fn main() -> Int {
    let x: Int = undefined
    4 + x
}